--- a/package.json
+++ b/package.json
@@ -23,46 +23,114 @@
     "test:ember": "ember test"
   },
   "devDependencies": {
+    "@adopted-ember-addons/ember-stripe-elements": "^1.0.0-rc.2",
+    "@babel/eslint-parser": "^7.14.2",
+    "@babel/plugin-proposal-decorators": "^7.14.2",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.8",
     "@ember/optional-features": "^2.0.0",
-    "@ember/test-helpers": "^2.2.5",
+    "@ember/render-modifiers": "^1.0.2",
+    "@ember/test-helpers": "^2.2.0",
     "@glimmer/component": "^1.0.4",
-    "@glimmer/tracking": "^1.0.4",
-    "babel-eslint": "^10.1.0",
+    "@html-next/vertical-collection": "^2.0.0",
     "broccoli-asset-rev": "^3.0.0",
-    "ember-auto-import": "^1.11.2",
-    "ember-cli": "~3.26.1",
-    "ember-cli-app-version": "^5.0.0",
-    "ember-cli-babel": "^7.26.3",
+    "broccoli-funnel": "^3.0.3",
+    "codecov": "^3.8.1",
+    "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.5.2",
+    "ember-autoresize": "^1.3.2",
+    "ember-awesome-macros": "^6.0.0",
+    "ember-cli": "^3.25.1",
+    "ember-cli-autoprefixer": "^1.0.3",
+    "ember-cli-cjs-transform": "^2.0.0",
+    "ember-cli-clipboard": "^0.15.0",
+    "ember-cli-code-coverage": "^1.0.2",
     "ember-cli-dependency-checker": "^3.2.0",
-    "ember-cli-htmlbars": "^5.7.1",
+    "ember-cli-deploy": "^1.0.2",
+    "ember-cli-deploy-build": "^2.0.0",
+    "ember-cli-deploy-display-revisions": "^2.0.0",
+    "ember-cli-deploy-gzip": "^2.0.0",
+    "ember-cli-deploy-new-relic-sourcemap": "^0.1.2",
+    "ember-cli-deploy-revision-data": "^1.0.0",
+    "ember-cli-deploy-s3": "^3.0.0",
+    "ember-cli-deploy-s3-index": "^1.1.0",
+    "ember-cli-deploy-webhooks": "^1.0.0-beta.1",
+    "ember-cli-document-title-northm": "^1.0.3",
+    "ember-cli-dotenv": "^3.0.1",
+    "ember-cli-fake-server": "github:201-created/ember-cli-fake-server#master",
     "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-sri": "^2.1.1",
+    "ember-cli-notifications": "^6.2.0",
+    "ember-cli-postcss": "^6.0.1",
+    "ember-cli-qunit": "^4.4.0",
+    "ember-cli-sass": "^10.0.1",
+    "ember-cli-shims": "^1.2.0",
+    "ember-cli-showdown": "^4.4.4",
+    "ember-cli-sri": "^2.1.0",
+    "ember-cli-string-helpers": "^5.0.0",
     "ember-cli-terser": "^4.0.1",
-    "ember-data": "~3.26.0",
-    "ember-export-application-global": "^2.0.1",
-    "ember-fetch": "^8.0.4",
-    "ember-load-initializers": "^2.1.2",
-    "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-page-title": "^6.2.1",
-    "ember-qunit": "^5.1.4",
-    "ember-resolver": "^8.0.2",
-    "ember-source": "~3.26.1",
-    "ember-template-lint": "^3.2.0",
-    "eslint": "^7.23.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-ember": "^10.3.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "loader.js": "^4.7.0",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.2.1",
-    "qunit": "^2.14.1",
-    "qunit-dom": "^1.6.0"
+    "ember-code-snippet": "^3.0.0",
+    "ember-collection": "^1.0.0-alpha.9",
+    "ember-composable-helpers": "^4.0.0",
+    "ember-concurrency": "^1.1.7",
+    "ember-copy": "^2.0.1",
+    "ember-cp-validations": "^4.0.0-beta.10",
+    "ember-disable-proxy-controllers": "^1.0.1",
+    "ember-drag-drop": "^0.8.2",
+    "ember-drag-drop-polyfill": "^2.0.3",
+    "ember-export-application-global": "^2.0.0",
+    "ember-file-upload": "^3.0.4",
+    "ember-font-awesome": "^4.0.0-rc.4",
+    "ember-fullscreen": "^1.0.1",
+    "ember-highcharts": "^2.2.0",
+    "ember-jquery-legacy": "^1.0.0",
+    "ember-load-initializers": "^2.1.1",
+    "ember-math-helpers": "^2.11.1",
+    "ember-metrics": "^1.2.0",
+    "ember-modifier": "^2.1.1",
+    "ember-moment": "^8.0.0",
+    "ember-new-relic": "^0.7.0",
+    "ember-pikaday": "^3.0.0",
+    "ember-power-select": "^3.0.6",
+    "ember-print-this": "^2.0.0",
+    "ember-promise-helpers": "^1.0.6",
+    "ember-resolver": "^8.0.0",
+    "ember-rl-dropdown": "~0.10.2",
+    "ember-simple-auth": "^3.1.0",
+    "ember-source": "~3.12.0",
+    "ember-table": "^3.0.0-3",
+    "ember-template-lint": "^3.1.1",
+    "ember-test-selectors": "^5.0.0",
+    "ember-tooltips": "^3.4.7",
+    "ember-transition-helper": "^1.0.0",
+    "ember-truth-helpers": "^3.0.0",
+    "ember-websockets": "^7.2.0",
+    "eslint": "^7.21.0",
+    "eslint-plugin-ember": "^10.1.2",
+    "highcharts": "^8.1.0",
+    "liquid-fire": "0.31.0",
+    "loader.js": "^4.2.3",
+    "node-sass": "^5.0.0",
+    "normalize.css": "^8.0.1",
+    "pretender": "^3.4.3",
+    "sass": "^1.34.1",
+    "stylelint": "^13.9.0",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-scss": "^3.18.0",
+    "zy-ember-froala-editor": "2.9.6",
+    "zycommon-web": "file:../zybooks-platform/zycommon-web"
+  },
+  "dependencies": {
+    "data-forge": "^1.7.2",
+    "ember-cli-babel": "^7.26.1",
+    "ember-cli-htmlbars": "^5.6.2",
+    "ember-responsive": "^3.0.0",
+    "jquery": "3.4.1",
+    "jquery-resizable": "^1.0.6",
+    "jquery.scrollto": "^2.1.3",
+    "underscore": "^1.10.2",
+    "tailwindcss": "^1.4.6"
   },
   "engines": {
     "node": "10.* || >= 12"
-  },
-  "ember": {
-    "edition": "octane"
   }
 }
